# ct-mt5-ai-xauusd-trader-a985daeb

./: .gitignore  .pip-audit.ignore  .pre-commit-config.yaml  ATTRIBUTIONS.md  CHANGELOG.md  CONTRIBUTING.md  DATABASE_STANDARDS.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_PLAN.md  Dockerfile  EXCELLENCE_BLUEPRINT.md  EXECUTION_SUMMARY.md  FINAL_RECOMMENDATIONS.md  IMPROVEMENTS_SUMMARY.md  MONITORING_ALERTING.md  Makefile  PERFORMANCE_TUNING.md  PHASE1_ROADMAP.md  PROJECT_BUNDLE.md  README.md  RISK_LIMITS.md  SECURITY.md  SECURITY_FRAMEWORK.md  SETUP_GUIDE.md  TESTING_STRATEGY.md  TRADING_STANDARDS.md  alembic.ini  benchmark_performance.py  check_imports.py  docker-compose.yml  main.py  pyproject.toml  requirements-ci-no-talib.txt  requirements-ci.txt  requirements-docker.txt  requirements-linux.txt  requirements-temp.txt  requirements-test.txt  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  security_report.yml
.github/workflows/: auto-merge-audit.yml  auto-merge-policy.yml  changelog.yml  ci.yml  commit-check.yml  daily_triage.yml  data-cleanup.yml  license-check.yml  migration-safety.yml  pre-deploy-validation.yml  release.yml
.jules/: bolt.md  palette.md
docs/: ARCHITECTURE_QUICK.md  BACKTESTING.md  BENCHMARKING.md  CONFIG_REFERENCE.md  CONTRIBUTING.md  CONTRIBUTION_MAP.md  DATA_RETENTION_POLICY.md  DEPENDENCY_LICENSES.md  DISASTER_RECOVERY.md  ENTERPRISE_STANDARDS.md  FIRST_REAL_CONTRIBUTION.md  LICENSE_COMPLIANCE.md  PREPROD_CHECKLIST.md  RELEASE_ARTIFACTS.md  RELEASE_PLAYBOOK.md  SLO_TARGETS.md  VERSIONING_POLICY.md  environment_hygiene.md  macro_intelligence.md  resilience_hardening_v4.md  resilience_hardening_v5.md  security_hardening.md
docs/analytics/: execution_quality.md  journal_mining.md
docs/audits/: ADR_AUDIT_REPORT.md  ENTERPRISE_EVIDENCE_SCORECARD.md  README.md  walkforward_verification_report.md
docs/features/: ACCEPTANCE_CRITERIA_ADAPTIVE_EXECUTION_FEEDBACK.md  ACCEPTANCE_CRITERIA_ADAPTIVE_POSITION_SIZING.md  ACCEPTANCE_CRITERIA_ALPHA_DISCOVERY.md  ACCEPTANCE_CRITERIA_AUDIT_LOGGING.md  ACCEPTANCE_CRITERIA_AUDIT_TRAIL_EXTENSION.md  ACCEPTANCE_CRITERIA_AUTONOMOUS_PARAMETER_OPTIMIZATION.md  (+141 more)
migrations/: env.py
scripts/: atlas_audit.py  backup_verify.sh  benchmark_db.py  benchmark_hotspots.py  bootstrap.sh  bump_version.py  check_release_notes.py  data_cleanup.py  doctor.py  generate_config_docs.py  generate_incident_report.py  generate_research_report.py  generate_triage_report.py  label_market_regimes.py  package_release.sh  smoke_test.py  update_changelog.py  validate_env.py  verify_allocator_reporting.py  verify_backtest_audit.py  verify_benchmarking.py  verify_dependencies.py  verify_explainability_ui.py  verify_hyperopt_walkforward.py  verify_journal_mining.py  verify_migrations.py  verify_rare_event_reporting.py  verify_reporting_system.py  verify_slos.py  verify_stress_lab.py  verify_ux_terminal.py  verify_version_sync.py
src/: __init__.py
src/core/: __init__.py  (+17 more)
tests/: __init__.py  conftest.py  test_adaptive_feedback_loop.py  test_adversarial_scenarios.py  test_anomaly_scenarios.py  test_audit_health.py  test_audit_traceability.py  test_backtest_auditing.py  test_backtest_drawdown_optimization.py  test_backtest_metrics_determinism.py  test_backtest_reporting_pipeline.py  test_backtest_slope_optimization.py  test_backtester.py  test_backtester_institutional.py  test_backtester_new.py  test_benchmarks.py  test_benchmarks_extended.py  test_calibration.py  test_calibration_validator.py  test_capital_allocator.py  test_changelog_automation.py  test_ci_fix_verification.py  test_circuit_breaker.py  test_cli_resilience.py  test_cli_ux.py  test_config.py  test_config_new.py  test_config_security.py  test_config_validator.py  test_data_cleanup.py  test_data_cleanup_system.py  test_data_pipeline_integration.py  test_database_performance.py  test_database_security.py  test_database_utility.py  test_debt_cleanup.py  test_decision_funnel_metrics.py  test_decision_pipeline_integration.py  test_decision_support.py  test_decision_support_v2.py  (+106 more)
(+119 files in other folders)
